<resources>
    <string name="app_name">LuckyGameSDK</string>
    <string name="nameGame">LuckyGame</string>
    <string name="text_nocon">Please Connect Internet</string>
    <string name="movie_and_series">หนังและซีรี่ย์</string>
    <string name="all_games">เกมทั้งหมด</string>
    <string name="text_moreapp">แอพเพิ่มเติม</string>
    <string name="text_morenew"><u>เพิ่มเติม</u></string>
    <string name="text_readmore">อ่านต่อ</string>
    <string name="text_date">วันที่</string>
    <string name="text_click_now"><u>คลิกเลย</u></string>
    <string name="ok">ตกลง</string>
    <string name="accept">ยอมรับ</string>
    <string name="cancel">ยกเลิก</string>
    <!-- WebView -->

    <!-- Login,Regis,Forgot -->
    <string name="text_alert_user_min">กรุณากรอกชื่อให้ครบ</string>
    <string name="text_alert_email_min">กรุณากรอกอีเมลให้ครบ</string>
    <string name="text_alert_policy_uncheck">กรุณายืนยันนโยบายส่วนตัว</string>
    <string name="text_alert_password_min">กรุณากรอกรหัสให้ครบ</string>
    <string name="text_alert_password_not_same">กรุณากรอกรหัสให้ตรงกัน</string>
    <string name="text_alert_user_wrong">ชื่อผิด กรุณากรอกใหม่อีกครั้ง</string>
    <string name="text_alert_password_worng">รหัสผิด กรุณากรอกใหม่อีกครั้ง</string>
    <string name="text_alert_recovery">ส่งคำขอรีเซ็ตพาสเวิร์ดแล้ว</string>
    <string name="text_alert_delete_uncheck">กรุณายืนยันการลบ</string>
    <string name="text_ask_delete">คุณต้องการลบบัญชี?</string>
    <string name="privacy_policy">นโยบายความเป็นส่วนตัว</string>
    <string name="delete_account">ลบบัญชี</string>
    <string name="by_starvision_team">By StarVision Team</string>
    <string name="register">สมัครสมาชิก</string>
    <string name="next">ถัดไป</string>
    <string name="recovery">กู้คืนบัญชี</string>
    <string name="text_day">วัน</string>
    <string name="text_guide_started">เริ่มต้นการใช้งาน</string>
    <string name="text_guide_desc">เข้าสู่ระบบ หรือ สมัครสมาชิก เพื่อรับข่าวสาร</string>
    <string name="text_recovery1">คุณเหลือเวลาในการกู้คืนบัญชีอีก</string>
    <string name="text_recovery2">คุณต้องการกู้คืนบัญชีของคุณหรือไม่</string>
    <string name="you_already_have_an_account">คุณเคยมีบัญชี?</string>
    <string name="glide_news">เข้าสู่ระบบ หรือ สมัครสมาชิก เพื่อรับข่าวสารพิเศษ</string>
    <string name="login">เข้าสู่ระบบ</string>
    <string name="login_th">เข้าสู่ระบบ</string>
    <string name="forgot_password">ลืมรหัสผ่าน?</string>
    <string name="remember">จดจำรหัสผ่าน</string>
    <string name="password">รหัสผ่าน</string>
    <string name="username">ชื่อบัญชี</string>
    <string name="policy_text">นโยบายความเป็นส่วนตัว</string>
    <string name="forgot">ลืมรหัสผ่าน</string>
    <string name="e_mail">อีเมล</string>
    <string name="sent">ส่ง</string>
    <string name="confirm_logout">ท่านต้องการออกจากระบบใช่หรือไม่?</string>
    <string name="confirm_password">ยืนยันรหัสผ่าน</string>
    <string name="please_click_to_accept">กรุณายืนยัน</string>
    <string name="please_click_to_accept_dialog">กรุณายืนยันเพื่อยอมรับ</string>
    <!-- Login,Regis,Forgot -->

    <!-- delete and recovery -->
    <string name="text_alert_delete_account">หากคุณต้องการยืนยันลบบัญชี, ระบบจะดำเนินการลบข้อมูลต่างๆในบัญชีของคุณ. ถ้าคุณต้องการกู้คืนบัญชี ให้ทำการล็อคอินด้วยบัญชีเดิมอีกครั้งและทำตามขั้นตอนกู้คืนภายใน 30วัน. หลังจากบัญชีถูกลบไปแล้ว, ข้อมูลในบัญชีทั้งหมดจะถูกลบและไม่สามารถกู้คืนได้, กรุณาพิจารณาด้วยความระมัดระวังก่อนลบบัญชี </string>
    <string name="text_alert_delete_account1">1. หลังจากส่งคำขอลบ ID จะมีระยะเวลา 7 วันนับจากวันที่ยอมรับในการส่งคำขอกู้คืน ID หากเข้าสู่ระบบแล้ว การลบ ID สามารถยกเลิกการลบได้ หลังจากสิ้นสุดระยะเวลาการส่งใบสมัคร ID จะถูกลบและไม่สามารถกู้คืนได้</string>
    <string name="text_alert_delete_account2">2. เมื่อระยะเวลาการสมัครสิ้นสุดลง คุณจะสามารถเข้าสู่ระบบหรือสร้างบัญชีใหม่โดยใช้วิธีเดียวกันหรือวิธีอื่นได้</string>
    <string name="text_alert_delete_account3">3. ในกรณีที่มีบุคคลอื่นทำผิดพลาดหรือทำการกู้คืน ID ฯลฯ โปรดติดต่อทีมงานสำหรับปัญหานี้</string>
    <string name="confirm_delete">ฉันตกลงที่จะลบ ID ของฉัน และข้อมูลทั้งหมด</string>

    <!-- เลขเด็ดหวยดัง -->
    <string name="lotto_package">com.starvision.lottothai</string>
    <string name="lotto_app">- ตรวจลอตเตอรี่, ตรวจรางวัล, หวยลาว, lottery thai
        - ตรวจหวย ด้วย QRCode (คิวอาร์โค้ด)
        - แจ้งเตือนเมื่อหวยออกทันที รวดเร็ว ทันใจ ++
        - รู้ผลลอตเตอรี่ แบบ Real Time ด้วยการแจ้งเตือน Push ไม่ต้องเสียตังค์!!
        - อัพเดทผลสลาก ตรวจลอตเตอรี่ ผลสลากกินแบ่งรัฐบาล ได้ก่อนใคร คอหวย สามารถตรวจล็อตเตอรี่ได้ครั้งละหลายๆ ใบ
        - สถิติหวยรายวัน เช่น สถิติหวยออกวันจันทร์,สถิติหวยออกวันอังคาร, สถิติหวยวันพุธ
        - สถิติหวยรายเดือน เช่น สถิติหวยเดือนตุลาคม, สถิติหวยออกเดือนพฤศจิกายน
        - วิเคราะห์เลขเด็ดจากหลายแหล่งให้เลขตรงกัน
        - อันดับสำนักให้หวยแม่น และสถิติเลขหวยสำนักแม่น
        - จัดการเรียงเมนูได้ด้วยตนเอง
        - ร่วมสนุก เสี่ยงดวง โดยการ ขูดเลขเด็ด แล้ววัดผลความแม่นกับสำนักดัง
        - เลขจากสำนักดัง เลขเด็ด วิเคราะห์หวย รวบรวมเหล่าหวยดังจากบรรดาสำนัก เกจิอาจารย์ดัง อัพเดททุกงวด
        - ทำนายฝันแม่นๆ กว่า 4,000 คำ พร้อมเลขนำโชค
        - ข่าวเลขดัง รวมทุกความเคลื่อนไหวเรื่องหวยทั่วไทย ไม่ควรพลาด
        - สถิติหวย สรุปวิเคราะห์สถิติหวย 2ตัว 3ตัว สามารถตรวจสอบหวยย้อนหลัง และแสดงสถิติสำนักที่ให้หวยแม่น
        - ดูดวง ประจำวันกันได้ด้วยการ เสี่ยงเซียมซี
        - เงื่อนไขเงินรางวัลสลากกินแบ่งรัฐบาล
        - ฟังวิทยุออนไลน์ ฟังหวยสด
        - แชร์เลขดัง , ข่าวหวย , หวย , สถิติหวยย้อนหลัง ThaiLottery ไปยัง Facebook, Twitter, Line
        - ฝากตรวจหวยล่วงหน้า
        - ร่วมด้วยช่วยกันแชร์ เลขดัง ของคุณใน Vote หวย
        - สแกนเลขดัง ของท่านเองบนบาร์โค้ดสลากสินค้าต่างๆ</string>
    <string name="lotto_more">ดูเพิ่มเติมเต็มๆได้ที่ \"เลขเด็ดหวยดัง - ตรวจหวย\"</string>
    <string name="lotto_name">เลขเด็ดหวยดัง</string>
    <string name="text_bureau_off">สำนัก : </string>
    <string name="text_3_off">3 ตัวบน :</string>
    <string name="text_2_up_off">2 ตัวบน :</string>
    <string name="text_2_down_off">2 ตัวล่าง :</string>
    <string name="text_date_off">งวดวันที่ </string>
    <string name="text_name_app_lottothai">เลขเด็ดหวยดัง</string>
    <!-- เลขเด็ดหวยดัง -->

    <!-- Profile -->
    <string name="text_coin">Coin : </string>
    <string name="name_profile">Name :</string>
    <string name="id_profile">ID :</string>
    <string name="topup">Topup</string>
    <string name="e_mail_profile">E-mail :</string>
    <string name="account_management_profile">ตั้งค่าบัญชี</string>
    <string name="coupon">เติมเงิน</string>
    <string name="logout_profile">ออกจากระบบ</string>
    <string name="account_bar_profile">บัญชี</string>
    <string name="facebook_profile">Facebook</string>
    <string name="line_profile">Line</string>
    <string name="google_profile">Google</string>
    <string name="mid_profile">mid</string>
    <!-- Profile -->

    <!--  ตรวจหวย  -->
    <string name="checklotto_app">ตรวจสลากกินแบ่ง (Lottery Thai) - ตรวจหวยย้อนหลัง รวดเร็วทันใจ พร้อมระบบฝากตรวจล่วงหน้า ช่วยให้คุณตรวจหวยได้อย่างสะดวกสบายยิ่งขึ้น</string>
    <string name="checklotto_more">ดูเพิ่มเติมเต็มๆได้ที่ \"ตรวจหวย ตรวจลอตเตอรี่\"</string>
    <string name="checklotto_name">ตรวจหวย</string>
    <string name="checklotto_package">com.smileapp.lottery</string>
    <string name="text_name_app_check_lotto">ตรวจหวย</string>
    <string name="check_one">รางวัลที่ 1</string>
    <string name="check_one_by">รางวัลข้างเคียงรางวัลที่ 1</string>
    <string name="check_two_end">เลขท้าย 2 ตัว</string>
    <string name="check_three_end">เลขท้าย 3 ตัว</string>
    <string name="check_three_end_up">เลขหน้า 3 ตัว</string>
    <string name="check_two">รางวัลที่ 2</string>
    <string name="check_three">รางวัลที่ 3</string>
    <string name="check_four">รางวัลที่ 4</string>
    <string name="check_five">รางวัลที่ 5</string>
    <string name="check_help">*ขอให้ท่านตรวจสอบข้อมูลผลสลากที่สมบูรณ์จากสำนักงานสลากกินแบ่งรัฐบาลอีกครั้ง www.glo.or.th</string>
    <string name="check_tickets">งวดนี้ยังไม่มีข้อมูลใบตรวจรางวัล</string>
    <string name="check_text">ตรวจหวย งวด</string>
    <string name="text_web_glo">http://www.glo.or.th/</string>
    <string name="text_check_incomplete_">ใส่เลขสลาก 6 หลัก</string>
    <string name="text_check">ตรวจ</string>
    <string name="sub_check_number_ticket">หมายเลขสลากของคุณ</string>
    <string name="sub_check_number_result1">ถูกรางวัลที่ 1 </string>
    <string name="sub_check_number_result1by">ถูกรางวัลข้างเคียงที่ 1 </string>
    <string name="sub_check_number_result2end">ถูกเลขท้าย 2 ตัว </string>
    <string name="sub_check_number_result3end">ถูกเลขท้าย 3 ตัว </string>
    <string name="sub_check_number_result3enddown">ถูกเลขท้าย 3 ตัว </string>
    <string name="sub_check_number_result3endup">ถูกเลขหน้า 3 ตัว </string>
    <string name="sub_check_number_result2">ถูกรางวัลที่ 2 </string>
    <string name="sub_check_number_result3">ถูกรางวัลที่ 3 </string>
    <string name="sub_check_number_result4">ถูกรางวัลที่ 4 </string>
    <string name="sub_check_number_result5">ถูกรางวัลที่ 5 </string>
    <string name="sub_check_number_result_out">ไม่ถูกรางวัล </string>
    <string name="sub_check_number_pause">รอผลรางวัล </string>
    <string name="text_check_incomplete">กรุณาใส่หมายเลขสลาก 6 หลัก</string>
    <!--  ตรวจหวย  -->

    <!--  ราคาทองวันนี้  -->
    <string name="goldToday_app">ติดตาม ราคาทองคำ ในประเทศไทย Thai Gold Price in Thailand</string>
    <string name="goldToday_more">ดูเพิ่มเติมเต็มๆได้ที่ \"ราคาทองวันนี้\"</string>
    <string name="goldToday_name">ราคาทองวันนี้</string>
    <string name="goldToday_package">com.smileapp.goldprice</string>
    <string name="news_today">ข่าวประจำวัน</string>
    <string name="text_episode">EP:</string>
    <string name="tv_gold_buy">รับซื้อ (บาท) : </string>
    <string name="tv_gold_newest">ราคาทองวันที่</string>
    <string name="tv_gold_sell">ขายออก (บาท) : </string>
    <string name="gold_96_5">ทองรูปพรรณ 96.5%</string>
    <string name="gold_in_place_96_5">ทองคำแท่ง 96.5%</string>
    <!--  ราคาทองวันนี้  -->

    <!-- น้ำมัน-->
    <string name="oil1">แก๊สโซฮอล์ 95</string>
    <string name="oil2">แก๊สโซฮอล์ 91</string>
    <string name="oil3">แก๊สโซฮอล์ E20</string>
    <string name="oil4">แก๊สโซฮอล์ E85</string>
    <string name="oil5">เบนซิน 95</string>
    <string name="oil6">ดีเซล เกรดดี</string>
    <string name="oil7">ดีเซล</string>
    <string name="oil8">NGV</string>
    <string name="today_cheapest">ราคาน้ำมันถูกสุดวันนี้</string>
    <string name="oil_app">เกาะติดสถานการณ์ราคาน้ำมันรายวัน ได้แล้ววันนี้</string>
    <string name="oil_more">ดูเพิ่มเติมเต็มๆได้ที่ \"ราคาน้ำมันวันนี้\"</string>
    <string name="oil_name">ราคาน้ำมันวันนี้</string>
    <string name="oil_footer">* ราคาปลีกในเขต กทม. และปริมณฑล ไม่รวมภาษีบำรุงท้องถิ่น\n(ถ้ามี)</string>
    <!-- อัตราแลกเปลี่ยน-->
    <string name="exchange_app">ศูนย์รวมข้อมูลอัตราการแลกเปลี่ยนจากที่ต่างๆในแอปเดียว</string>
    <string name="exchange_more">ดูเพิ่มเติมเต็มๆได้ที่ \"อัตราแลกเปลี่ยนวันนี้\"</string>
    <string name="exchange_name">อัตราแลกเปลี่ยนวันนี้</string>
    <string name="bank">ธนาคาร</string>
    <string name="buy">ซื้อ (THB)</string>
    <string name="sell">ขาย (THB)</string>
    <!-- ดูดวง 12 ราศี-->
    <string name="zodiac_app">ดูดวงตามราศีเกิด การเงิน การงาน โชคลาภ ความรัก</string>
    <string name="zodiac_more">ดูเพิ่มเติมเต็มๆได้ที่ \"ดูดวง 12 ราศี\"</string>
    <string name="zodiac_name">ดูดวง 12 ราศี</string>

    <!--package-->
    <string name="oil_package">com.smileapp.oil</string>
    <string name="exchange_package">com.starvision.exchangerate</string>
    <string name="zodiac_package">com.smileapp.zodiac</string>
    <string name="gold_package">com.smileapp.goldprice</string>
    <string name="lucky_package">com.starvision.lottothai</string>
    <string name="lottery_package">com.smileapp.lottery</string>
</resources>