<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@mipmap/bg_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/ln_top_bar"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/btn_back"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="0"
                android:paddingStart="10dp"
                android:layout_marginStart="15dp"
                app:srcCompat="@drawable/btn_back_sdk_black" />

            <TextView
                android:id="@+id/name_page"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginEnd="55dp"
                android:layout_weight="1"
                android:fontFamily="@font/psl156"
                android:gravity="center"
                android:text="@string/forgot"
                android:textColor="@color/black"
                android:textSize="28sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:layout_marginTop="40dp"
            android:adjustViewBounds="true"
            android:src="@mipmap/ic_launcher" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="40dp"
            app:cardCornerRadius="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:background="@color/white_edittext">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="5"
                    android:layout_marginStart="20dp"
                    android:padding="5dp"
                    android:src="@mipmap/email"/>

                <EditText
                    android:id="@+id/edit_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/transparent"
                    android:hint="@string/e_mail"
                    android:fontFamily="@font/psl156"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textSize="22sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="40dp"
            app:cardCornerRadius="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:background="@color/white_edittext">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="8dp"
                    android:layout_marginStart="20dp"
                    android:layout_gravity="center"
                    android:layout_weight="5"
                    android:src="@mipmap/account"/>

                <EditText
                    android:id="@+id/edit_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:layout_weight="1"
                    android:hint="@string/username"
                    android:fontFamily="@font/psl156"
                    android:inputType="textPersonName"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textSize="22sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/ln_remember"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:orientation="horizontal"
            android:visibility="gone">

            <CheckBox
                android:id="@+id/remember_pass"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:buttonTint="@color/grey_text"
                android:text="@string/remember"
                android:textColor="@color/grey_text" />

            <TextView
                android:id="@+id/tv_forgot"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center|end"
                android:text="@string/forgot_password"
                android:textColor="@color/blue_link"
                android:textSize="13sp"
                android:textStyle="bold" />

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_sent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="40dp"
            app:cardCornerRadius="15dp">

            <TextView
                android:id="@+id/edit_sent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_login"
                android:gravity="center"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp"
                android:text="@string/sent"
                android:fontFamily="@font/psl156"
                android:textColor="@color/white"
                android:textSize="26sp" />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/ln_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:id="@+id/tv_askRegis"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/you_already_have_an_account"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_register"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:gravity="top"
                android:paddingStart="5dp"
                android:paddingEnd="15dp"
                android:text="@string/register"
                android:textColor="@color/blue_link"
                android:textSize="13sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ln_policy"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:gravity="bottom|center_horizontal"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:id="@+id/tv_policy"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:gravity="center"
                android:paddingStart="10dp"
                android:paddingEnd="2dp"
                android:text="@string/privacy_policy"
                android:textColor="@color/blue_link"
                android:textSize="13sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_by"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/by_starvision_team"
                android:textColor="@color/grey_text"
                android:textSize="13sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar3"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>